# opencascade_test

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  test.json
include/: opencascade_test.h
src/: main.cpp  opencascade_test.cpp
test_package/: conanbuildinfo.txt  conanfile.py  conaninfo.txt  graph_info.json
test_package/build-release/conan/: conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanrun.sh  deactivate_conanrunenv-release-x86_64.sh
